--- a/workflow/wftpl_aiops-easytrade-demo.yaml
+++ b/workflow/wftpl_aiops-easytrade-demo.yaml
@@ -12,7 +12,7 @@ metadata:
       targets:
         - tasks.check_what_is_wrong.objectId
 workflow:
-  title: AIops-easytrade-DEMO - Copy
+  title: AIops-easytrade-DEMO
   tasks:
     cpu_problem:
       name: cpu_problem
